<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondappli"
    android:fadeScrollbars="false"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="appli.beta.blackfox.Horsligne" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignLeft="@+id/imageView1"
        android:text="@string/titre"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        style="@style/button_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button"
        android:text="@string/btnAcc"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button2"
        style="@style/button_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="82dp"
        android:background="@drawable/red_button"
        android:text="@string/BtnGallerie" />

    <Button
        android:id="@+id/button3"
        style="@style/button_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button2"
        android:background="@drawable/red_button"
        android:text="@string/btnRegle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPuissance"
        android:id="@+id/button4"
        style="@style/button_go"
        android:layout_below="@+id/button3"
        android:background="@drawable/red_button"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1" />

</RelativeLayout>
